--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.66.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
